@@ -1,11 +1,3 @@
-// Configuration des couleurs pour les notifications
-def COLOR_MAP = [
-    'SUCCESS': 'good',
-    'FAILURE': 'danger',
-    'UNSTABLE': 'warning',
-    'ABORTED': '#CCCCCC'
-]
-//test141
 pipeline {
     agent any
 
@@ -14,1222 +6,228 @@ pipeline {
         jdk 'JDK17'
     }
 
-    parameters {
-        booleanParam(name: 'ENFORCE_QUALITY_GATE', defaultValue: false, description: 'Abort pipeline if Sonar Quality Gate != OK')
-        booleanParam(name: 'FAIL_ON_CRITICAL_VULNS', defaultValue: false, description: 'Fail build on CRITICAL vulnerabilities')
-        booleanParam(name: 'FAIL_ON_HIGH_VULNS', defaultValue: false, description: 'Fail build on HIGH vulnerabilities')
-        booleanParam(name: 'ALLOW_MEDIUM_VULNS', defaultValue: true, description: 'Allow medium vulnerabilities without marking UNSTABLE')
-        booleanParam(name: 'ALLOW_SAST_FINDINGS', defaultValue: true, description: 'Allow SAST findings without marking UNSTABLE')
-        booleanParam(name: 'FAIL_ON_SECRETS', defaultValue: false, description: 'Fail build when secrets are detected')
-        booleanParam(name: 'ALLOW_LOW_VULNERABILITIES', defaultValue: true, description: 'Allow vulnerabilities without marking UNSTABLE')
-        booleanParam(name: 'RUN_DAST_SCAN', defaultValue: false, description: 'Perform DAST security testing')
-        string(name: 'TEST_ENVIRONMENT_URL', defaultValue: 'http://localhost:8080', description: 'URL for DAST testing')
-        choice(name: 'NOTIFICATION_TYPE', choices: ['SLACK', 'EMAIL', 'BOTH', 'NONE'], description: 'Select notification method')
-        string(name: 'EMAIL_RECIPIENTS', defaultValue: 'mekni.amin75@gmail.com', description: 'Email recipients for notifications')
-    }
-
     environment {
-        SCANNER_HOME = tool 'sonar-scanner'
-        GIT_COMMIT = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
-        BUILD_USER = sh(returnStdout: true, script: "whoami || echo 'System'").trim()
-        MAVEN_OPTS = '--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED'
-        JAVA_OPTS = '-Xmx1024m -XX:MaxPermSize=256m'
-        JACOCO_VERSION = '0.8.9'
-        BUILD_TIMESTAMP = new Date().format("yyyy-MM-dd_HH-mm-ss")
-    }
-
-    options {
-        timestamps()
-        ansiColor('xterm')
-        skipDefaultCheckout(false)
-        buildDiscarder(logRotator(numToKeepStr: '10'))
-        durabilityHint('MAX_SURVIVABILITY')
-        timeout(time: 60, unit: 'MINUTES')
+        SONAR_TOKEN = credentials('sonar-token')
     }
 
     stages {
-        // Étape 1: Préparation
-        stage('Clean Workspace') { 
-            steps { 
-                cleanWs() 
-            } 
-        }
 
-        // Étape 2: Récupération du code
         stage('Checkout') {
             steps {
+                deleteDir()
                 checkout([$class: 'GitSCM',
-                    branches: [[name: '*/main']],
-                    extensions: [
-                        [$class: 'CloneOption', depth: 1, shallow: true],
-                        [$class: 'CleanBeforeCheckout'],
-                        [$class: 'LocalBranch', localBranch: '**']
-                    ],
-                    userRemoteConfigs: [[
-                        url: 'https://github.com/4tnx/devsecops.git',
-                        credentialsId: 'jenkins-github-https-cred'
-                    ]]
+                          branches: [[name: 'main']],
+                          userRemoteConfigs: [[url: 'https://github.com/4tnx/devsecops']]
                 ])
-                
-                script {
-                    // Capture du commit message et auteur
-                    env.GIT_COMMIT_MESSAGE = sh(
-                        script: 'git log -1 --pretty=%B | head -1',
-                        returnStdout: true
-                    ).trim()
-                    env.GIT_AUTHOR = sh(
-                        script: 'git log -1 --pretty=%an',
-                        returnStdout: true
-                    ).trim()
-                }
-                
-                sh '''
-                    echo "📁 Workspace structure:"
-                    find . -name "*.java" -type f | head -10 || echo "No Java files found"
-                    echo "📄 Checking critical files..."
-                    [ -f "pom.xml" ] && echo "✅ pom.xml found" || echo "❌ pom.xml missing"
-                    [ -d "src/main/java" ] && echo "✅ src/main/java found" || echo "❌ src/main/java missing"
-                    echo "✅ Checkout completed successfully"
-                    echo "📝 Commit: ${GIT_COMMIT}"
-                    echo "👤 Author: ${GIT_AUTHOR}"
-                    echo "💬 Message: ${GIT_COMMIT_MESSAGE}"
-                '''
             }
         }
 
-        // Étape 3: Validation de la structure du projet
-        stage('Validate Project Structure') {
+        stage('Semgrep SAST') {
             steps {
                 sh '''
-                    echo "🔍 Validating project structure..."
-                    
-                    # Check if proper test structure exists
-                    if [ ! -d "src/test/java/com/visualpathit/test" ]; then
-                        echo "⚠️ Test directory structure missing, creating basic structure..."
-                        mkdir -p src/test/java/com/visualpathit/test
-                    fi
-                    
-                    # Create basic test files if they don't exist
-                    if [ ! -f "src/test/java/com/visualpathit/test/BasicTest.java" ]; then
-                        echo "📝 Creating basic test files..."
-                        cat > src/test/java/com/visualpathit/test/BasicTest.java << 'EOF'
-package com.visualpathit.test;
-
-import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.*;
-
-public class BasicTest {
-    
-    @Test
-    public void testBasicFunctionality() {
-        assertTrue(true, "Basic test should always pass");
-    }
-    
-    @Test 
-    public void testSimpleMath() {
-        assertEquals(2, 1+1, "Simple math test");
-    }
-}
-EOF
-                    fi
-                    
-                    # Validate critical files
-                    if [ ! -f "pom.xml" ]; then
-                        echo "❌ pom.xml not found!"
-                        exit 1
-                    fi
-                    
-                    if [ ! -d "src/main/java" ]; then
-                        echo "❌ src/main/java directory not found!"
-                        exit 1
-                    fi
-                    
-                    echo "✅ Project structure validated"
+                echo "Running Semgrep…"
+                docker run --rm -v $PWD:/src returntocorp/semgrep \
+                    semgrep --config=p/owasp-top-ten /src > semgrep-report.json
                 '''
+                archiveArtifacts artifacts: 'semgrep-report.json', allowEmptyArchive: true
+            }
+
+        }
+
+        stage('SpotBugs Analysis') {
+            steps {
+                sh 'mvn clean compile spotbugs:check || true'
+                archiveArtifacts artifacts: 'target/spotbugsXml.xml', allowEmptyArchive: true
+                archiveArtifacts artifacts: 'target/site/spotbugs.html', allowEmptyArchive: true
             }
         }
 
-        // Étape 4: Sécurité Shift-Left
-        stage('Early Security Scan') {
-            parallel {
-                stage('Secrets Detection') {
-                    steps {
-                        sh '''
-                            echo "🔍 Scanning for secrets in code..."
-                            if command -v gitleaks >/dev/null 2>&1; then
-                                echo "✅ Gitleaks is installed"
-                                gitleaks detect --source . --report-format json --report-path gitleaks-report.json --verbose || echo "Gitleaks scan completed with findings"
-                            else
-                                echo "⚠️ Gitleaks not installed, using fallback"
-                                mkdir -p target
-                                echo '{"Findings": []}' > gitleaks-report.json
-                            fi
-                        '''
-                    }
-                    post {
-                        always {
-                            script {
-                                if (fileExists('gitleaks-report.json')) {
-                                    archiveArtifacts artifacts: 'gitleaks-report.json', allowEmptyArchive: true
-                                    try {
-                                        def gitleaksContent = readFile('gitleaks-report.json')
-                                        if (gitleaksContent.trim() && gitleaksContent != '{"Findings": []}') {
-                                            def gitleaksReport = readJSON text: gitleaksContent
-                                            def secretsCount = gitleaksReport?.Findings?.size() ?: 0
-                                            echo "📁 Gitleaks report archived - Found ${secretsCount} secrets"
-                                            
-                                            // Only mark UNSTABLE if FAIL_ON_SECRETS is true, otherwise just warn
-                                            if (secretsCount > 0) {
-                                                echo "🔴 CRITICAL: ${secretsCount} secrets found in code!"
-                                                if (params.FAIL_ON_SECRETS) {
-                                                    if (currentBuild.result != 'FAILURE') {
-                                                        currentBuild.result = 'UNSTABLE'
-                                                        echo "❌ Secrets marked build as UNSTABLE (FAIL_ON_SECRETS=true)"
-                                                    }
-                                                } else {
-                                                    echo "⚠️ Secrets found but continuing due to FAIL_ON_SECRETS=false"
-                                                }
-                                            }
-                                        } else {
-                                            echo "✅ No secrets found by Gitleaks"
-                                        }
-                                    } catch (Exception e) {
-                                        echo "⚠️ Error parsing gitleaks report: ${e.message}"
-                                        // Create empty report to avoid pipeline failure
-                                        writeJSON file: 'gitleaks-report.json', json: [Findings: []]
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-
-                stage('SAST - Semgrep') {
-                    steps {
-                        sh '''
-                            echo "🔍 Running Semgrep SAST analysis..."
-                            if command -v semgrep >/dev/null 2>&1; then
-                                echo "✅ Semgrep is installed"
-                                semgrep --config auto --output semgrep.json --json --error . || echo "Semgrep scan completed with findings"
-                            else
-                                echo "⚠️ Semgrep not installed, using fallback"
-                                mkdir -p target
-                                echo '{"results": []}' > semgrep.json
-                            fi
-                        '''
-                    }
-                    post {
-                        always {
-                            script {
-                                if (fileExists('semgrep.json')) {
-                                    archiveArtifacts artifacts: 'semgrep.json', allowEmptyArchive: true
-                                    try {
-                                        def semgrepContent = readFile('semgrep.json')
-                                        if (semgrepContent.trim() && semgrepContent != '{"results": []}') {
-                                            def semgrepReport = readJSON text: semgrepContent
-                                            def findingsCount = semgrepReport?.results?.size() ?: 0
-                                            echo "📁 Semgrep report archived - Found ${findingsCount} issues"
-                                            
-                                            // Only mark UNSTABLE if ALLOW_SAST_FINDINGS is false
-                                            if (findingsCount > 0) {
-                                                echo "🟠 SAST findings: ${findingsCount} code issues detected"
-                                                if (!params.ALLOW_SAST_FINDINGS && currentBuild.result == null) {
-                                                    currentBuild.result = 'UNSTABLE'
-                                                    echo "⚠️ SAST findings marked build as UNSTABLE"
-                                                } else {
-                                                    echo "ℹ️ SAST findings allowed (ALLOW_SAST_FINDINGS=true)"
-                                                }
-                                            }
-                                        } else {
-                                            echo "✅ No SAST issues found by Semgrep"
-                                        }
-                                    } catch (Exception e) {
-                                        echo "⚠️ Error parsing semgrep report: ${e.message}"
-                                        // Create empty report to avoid pipeline failure
-                                        writeJSON file: 'semgrep.json', json: [results: []]
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
+        stage('Build + Test') {
+            steps {
+                sh 'mvn clean verify -DskipTests=false'
             }
         }
 
-        // Étape 5: Build et tests
-        stage('Build & Unit Tests') {
-            steps { 
+        stage('Verify Workspace') {
+            steps {
                 sh '''
-                    echo "🏗️ Building application with enhanced configuration..."
-                    
-                    # Clean and compile with proper JaCoCo configuration
-                    mvn -B clean compile test-compile || { echo "❌ Compilation failed"; exit 1; }
-                    
-                    echo "🧪 Running unit tests with proper configuration..."
-                    # Run tests with standard Maven JaCoCo configuration
-                    mvn -B test \
-                        -DfailIfNoTests=false \
-                        -Dmaven.test.failure.ignore=true || echo "⚠️ Tests completed with some failures"
-                    
-                    echo "📊 Generating JaCoCo reports..."
-                    mvn -B jacoco:report || echo "⚠️ JaCoCo report generation completed with warnings"
-                    
-                    echo "📦 Building package..."
-                    mvn -B package -DskipTests=true || { echo "❌ Package build failed"; exit 1; }
-                    
-                    echo "✅ Build and test phase completed"
+                    echo "Current directory: $(pwd)"
+                    echo "Files in workspace:"
+                    ls -la
                 '''
             }
-            post { 
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                sh 'docker build -f $WORKSPACE/Dockerfile -t testfoodfreezy $WORKSPACE'
+            }
+        }
+
+        stage('Trivy Scan') {
+            steps {
+                sh '''
+                echo "Running Trivy vulnerability scan..."
+                mkdir -p trivy_reports
+                trivy image --format template --template "@/usr/local/share/trivy/templates/html.tpl" -o trivy_reports/trivy-report.html testfoodfreezy || true
+                '''
+            }
+            post {
                 always {
-                    script {
-                        // Enhanced test report handling
-                        def testReportDir = 'target/surefire-reports'
-                        if (fileExists(testReportDir)) {
-                            def testFiles = findFiles(glob: '**/target/surefire-reports/*.xml')
-                            if (testFiles.size() > 0) {
-                                junit testResults: '**/target/surefire-reports/*.xml', allowEmptyResults: true, skipPublishingChecks: false
-                                echo "✅ Test reports processed - ${testFiles.size()} files found"
-                                
-                                // Display detailed test results
-                                try {
-                                    def testSummary = sh(returnStdout: true, script: '''
-                                        echo "=== TEST RESULTS SUMMARY ==="
-                                        for report in target/surefire-reports/*.xml; do
-                                            if [ -f "$report" ]; then
-                                                tests=$(grep -o "tests=\\"[0-9]*\\"" "$report" | head -1 | cut -d"\\"" -f2)
-                                                failures=$(grep -o "failures=\\"[0-9]*\\"" "$report" | head -1 | cut -d"\\"" -f2)
-                                                errors=$(grep -o "errors=\\"[0-9]*\\"" "$report" | head -1 | cut -d"\\"" -f2)
-                                                skipped=$(grep -o "skipped=\\"[0-9]*\\"" "$report" | head -1 | cut -d"\\"" -f2)
-                                                name=$(basename "$report" .xml | sed 's/TEST-//')
-                                                echo "📋 $name: Tests=$tests, Failures=$failures, Errors=$errors, Skipped=$skipped"
-                                            fi
-                                        done
-                                    ''').trim()
-                                    echo testSummary
-                                } catch (Exception e) {
-                                    echo "⚠️ Could not generate test summary: ${e.message}"
-                                }
-                            } else {
-                                echo "⚠️ No test XML reports found in ${testReportDir}"
-                                // Create placeholder test reports to ensure pipeline continues
-                                sh '''
-                                    mkdir -p target/surefire-reports
-                                    cat > target/surefire-reports/TEST-BasicTest.xml << 'EOF'
-<?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="BasicTest" tests="2" failures="0" errors="0" skipped="0" time="0.1">
-    <testcase name="testBasicFunctionality" classname="com.visualpathit.test.BasicTest" time="0.05"/>
-    <testcase name="testSimpleMath" classname="com.visualpathit.test.BasicTest" time="0.05"/>
-</testsuite>
-EOF
-                                '''
-                                junit testResults: '**/target/surefire-reports/*.xml', allowEmptyResults: true
-                                echo "📋 Created placeholder test reports for pipeline compatibility"
-                            }
-                        } else {
-                            echo "❌ Test reports directory not found at ${testReportDir}"
-                        }
-                        
-                        // Enhanced JaCoCo handling
-                        if (fileExists('target/jacoco.exec')) {
-                            def jacocoSize = sh(returnStdout: true, script: 'wc -c < target/jacoco.exec').trim()
-                            echo "✅ JaCoCo execution data found: ${jacocoSize} bytes"
-                            
-                            // Publish JaCoCo coverage report
-                            try {
-                                jacoco(
-                                    execPattern: '**/target/jacoco.exec',
-                                    classPattern: '**/target/classes',
-                                    sourcePattern: '**/src/main/java',
-                                    exclusionPattern: '**/test/**',
-                                    skipCopyOfSrcFiles: false
-                                )
-                                echo "✅ JaCoCo coverage report published"
-                            } catch (Exception e) {
-                                echo "⚠️ JaCoCo report publication failed: ${e.message}"
-                            }
-                        } else {
-                            echo "❌ No JaCoCo execution data found at target/jacoco.exec"
-                        }
-                        
-                        // Archive artifacts
-                        def warFiles = findFiles(glob: 'target/*.war')
-                        if (warFiles.size() > 0) {
-                            archiveArtifacts artifacts: '**/target/*.war', allowEmptyArchive: false
-                            def warSize = sh(returnStdout: true, script: "wc -c < '${warFiles[0].path}'").trim()
-                            echo "✅ WAR file archived: ${warFiles[0].name} (${warSize} bytes)"
-                        } else {
-                            echo "⚠️ No WAR file found in target directory"
-                        }
-                    }
-                }
-                success {
-                    echo "🎉 Build & Tests stage completed successfully"
-                }
-                failure {
-                    echo "❌ Build & Tests stage failed"
+                    archiveArtifacts artifacts: 'trivy_reports/*.html', allowEmptyArchive: true
                 }
             }
         }
 
-        // Étape 6: Analyse qualité et sécurité du code
-        stage('Code Quality & SAST') {
+        stage('OWASP Dependency-Check Vulnerabilities') {
+          steps {
+            dependencyCheck additionalArguments: '''
+                --scan "./target"
+                --enableExperimental
+                -f "ALL"
+                --prettyPrint
+            ''', odcInstallation: 'DP-Check'
+            dependencyCheckPublisher pattern: 'dependency-check-report.xml'
+            archiveArtifacts artifacts: 'dependency-check-report.html', allowEmptyArchive: true
+          }
+        }
+
+        stage('Secrets Scan - Gitleaks') {
             steps {
                 script {
-                    echo "🔧 Running SonarQube analysis with enhanced configuration..."
-                    
-                    try {
-                        withSonarQubeEnv('sonar-server') {
-                            withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_AUTH_TOKEN')]) {
-                                sh '''
-                                    echo "🔍 Starting SonarQube analysis..."
-                                    mvn -B sonar:sonar \
-                                        -Dsonar.projectKey=vprofile-application-${BUILD_NUMBER} \
-                                        -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
-                                        -Dsonar.junit.reportsPath=target/surefire-reports \
-                                        -Dsonar.java.binaries=target/classes \
-                                        -Dsonar.java.test.binaries=target/test-classes \
-                                        -Dsonar.sourceEncoding=UTF-8 \
-                                        -Dsonar.java.source=17 \
-                                        -Dsonar.projectVersion=2.0 \
-                                        -Dsonar.scm.provider=git
-                                '''
-                            }
-                        }
-                        echo "✅ SonarQube analysis completed successfully"
-                    } catch (Exception e) {
-                        echo "❌ SonarQube analysis failed: ${e.message}"
-                        echo "🔄 Continuing pipeline without SonarQube analysis"
-                        // Don't mark as UNSTABLE for SonarQube failures unless enforced
+                    sh "mkdir -p ${WORKSPACE}/secrets_reports"
+
+                    sh """
+                    docker run --rm -v ${WORKSPACE}:/code zricethezav/gitleaks:latest detect \
+                        --source=/code \
+                        --report-format=json \
+                        --report-path=/code/secrets_reports/gitleaks-report.json
+                    """
+                }
+                archiveArtifacts artifacts: 'secrets_reports/*.json'
+            }
+        }
+
+        stage('Run WebApp') {
+            steps {
+                sh '''
+                nohup java -jar target/*.jar > app.log 2>&1 &
+                for i in {1..30}; do
+                    if curl -s http://localhost:8080/  > /dev/null; then
+                        echo "Application is up!"
+                        exit 0
+                    fi
+                    echo "Waiting app to be ready..."
+                    sleep 2
+                done
+                echo "Application failed to start!"
+                exit 1
+                '''
+            }
+        }
+
+        stage("ZAP Scan") {
+            steps {
+                script {
+                    sh "docker rm -f zap 2>/dev/null || true"
+
+                    sh """
+                        docker run -d --network host --name zap ghcr.io/zaproxy/zaproxy:stable sleep infinity
+                    """
+                    sh "docker exec zap mkdir -p /zap/wrk"
+
+                    def zapExit = sh(
+                        script: "docker exec zap zap-full-scan.py -t http://localhost:8080 -r /zap/report.html",
+                        returnStatus: true
+                    )
+
+                    sh "mkdir -p ${WORKSPACE}/zap_reports"
+                    sh "docker cp zap:/zap/report.html ${WORKSPACE}/zap_reports/report.html"
+
+                    echo "ZAP scan finished with exit code: ${zapExit}"
+
+                    if (zapExit == 1 || zapExit == 3) {
+                        error "ZAP scan failed"
                     }
+                }
+            }
+
+            post {
+                always {
+                    archiveArtifacts artifacts: 'zap_reports/*.html', allowEmptyArchive: true
+                    sh "docker rm -f zap || true"
                 }
             }
         }
 
-        // Étape 7: Quality Gate conditionnelle
+        stage('Sonar Analysis') {
+            steps {
+                withSonarQubeEnv('SonarQubeServer') {
+                    sh "mvn sonar:sonar -Dsonar.projectKey=devops_java -Dsonar.host.url=http://192.168.50.4:9000 -Dsonar.login=${SONAR_TOKEN}"
+                }
+            }
+        }
+
         stage('Quality Gate') {
             steps {
-                script {
-                    echo "⚖️ Checking Quality Gate status..."
-                    
-                    timeout(time: 10, unit: 'MINUTES') {
-                        try {
-                            def qg = waitForQualityGate abortPipeline: params.ENFORCE_QUALITY_GATE
-                            
-                            if (qg.status != 'OK') {
-                                echo "❌ Quality Gate status: ${qg.status}"
-                                if (params.ENFORCE_QUALITY_GATE) {
-                                    error "Quality Gate failure: ${qg.status}. Pipeline aborted due to quality issues."
-                                } else {
-                                    echo "⚠️ Quality Gate failed but pipeline continues due to configuration"
-                                    // Don't mark as UNSTABLE for Quality Gate unless enforced
-                                }
-                            } else {
-                                echo "✅ Quality Gate status: ${qg.status}"
-                                echo "🎉 Code quality meets the required standards"
-                            }
-                        } catch (Exception e) {
-                            echo "⚠️ Quality Gate check failed or skipped: ${e.message}"
-                            if (params.ENFORCE_QUALITY_GATE) {
-                                error "Quality Gate check failed: ${e.message}"
-                            } else {
-                                echo "🔄 Continuing pipeline without Quality Gate"
-                                // Don't mark as UNSTABLE for Quality Gate issues unless enforced
-                            }
-                        }
-                    }
+                timeout(time: 1, unit: 'MINUTES') {
+                    waitForQualityGate abortPipeline: false
                 }
             }
         }
 
-        // Étape 8: Analyse des dépendances (SCA)
-        stage('Dependency Analysis') {
-            parallel {
-                stage('SCA - OWASP Dependency Check') {
-                    steps {
-                        sh '''
-                            echo "📦 Scanning dependencies for vulnerabilities..."
-                            mvn -B org.owasp:dependency-check-maven:check \
-                                -Dformat=HTML \
-                                -Dformat=XML \
-                                -Dodc.outputDirectory=target/dependency-check-report \
-                                -DretireJsEnabled=true \
-                                -DnodeAuditEnabled=false || echo "⚠️ Dependency check completed with warnings"
-                        '''
-                    }
-                    post {
-                        always {
-                            script {
-                                if (fileExists('target/dependency-check-report')) {
-                                    archiveArtifacts artifacts: 'target/dependency-check-report/*', allowEmptyArchive: true
-                                    echo "✅ Dependency check reports archived"
-                                }
-                            }
-                        }
-                    }
-                }
-
-                stage('SBOM Generation') {
-                    steps {
-                        sh '''
-                            echo "📄 Generating Software Bill of Materials..."
-                            mvn -B org.cyclonedx:cyclonedx-maven-plugin:makeAggregateBom || echo "⚠️ SBOM generation completed with warnings"
-                        '''
-                    }
-                    post {
-                        always {
-                            script {
-                                def bomFiles = findFiles(glob: 'target/bom.*')
-                                if (bomFiles.size() > 0) {
-                                    archiveArtifacts artifacts: 'target/bom.*', allowEmptyArchive: true
-                                    echo "✅ SBOM files archived: ${bomFiles.collect{it.name}.join(', ')}"
-                                } else {
-                                    echo "⚠️ No SBOM files generated"
-                                }
-                            }
-                        }
-                    }
-                }
-
-                stage('Trivy SCA Scan') {
-                    steps {
-                        sh '''
-                            echo "🔍 Scanning dependencies with Trivy..."
-                            if command -v trivy >/dev/null 2>&1; then
-                                echo "✅ Trivy is installed"
-                                trivy fs --scanners vuln \
-                                    --severity CRITICAL,HIGH,MEDIUM \
-                                    --format json \
-                                    --output trivy-sca.json \
-                                    --timeout 10m . || echo "⚠️ Trivy scan completed with warnings"
-                            else
-                                echo "⚠️ Trivy not available, skipping scan"
-                                mkdir -p target
-                                echo '{"Results": []}' > trivy-sca.json
-                            fi
-                        '''
-                    }
-                    post {
-                        always {
-                            script {
-                                if (fileExists('trivy-sca.json')) {
-                                    archiveArtifacts artifacts: 'trivy-sca.json', allowEmptyArchive: true
-                                    try {
-                                        def trivyContent = readFile('trivy-sca.json')
-                                        if (trivyContent.trim() && trivyContent != '{"Results": []}') {
-                                            def trivyReport = readJSON text: trivyContent
-                                            def results = trivyReport?.Results ?: []
-                                            def criticalCount = 0
-                                            def highCount = 0
-                                            def mediumCount = 0
-                                            
-                                            results.each { result ->
-                                                def vulnerabilities = result.Vulnerabilities ?: []
-                                                vulnerabilities.each { vuln ->
-                                                    if (vuln.Severity == 'CRITICAL') criticalCount++
-                                                    else if (vuln.Severity == 'HIGH') highCount++
-                                                    else if (vuln.Severity == 'MEDIUM') mediumCount++
-                                                }
-                                            }
-                                            echo "✅ Trivy report archived - CRITICAL: ${criticalCount}, HIGH: ${highCount}, MEDIUM: ${mediumCount}"
-                                        } else {
-                                            echo "✅ Trivy scan completed - No vulnerabilities found"
-                                        }
-                                    } catch (Exception e) {
-                                        echo "⚠️ Error parsing Trivy report: ${e.message}"
-                                        // Create empty report to avoid pipeline failure
-                                        writeJSON file: 'trivy-sca.json', json: [Results: []]
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-        // Étape 9: Application des politiques de sécurité - CORRECTED
-        stage('Security Policy Enforcement') {
-            steps {
-                script {
-                    echo "⚖️ Applying security policies..."
-                    
-                    def securityFindings = [
-                        critical: 0,
-                        high: 0,
-                        medium: 0,
-                        secrets: 0,
-                        semgrep: 0,
-                        trivy_critical: 0,
-                        trivy_high: 0,
-                        trivy_medium: 0,
-                        total_vulnerabilities: 0
-                    ]
-                    
-                    // Analyze security reports
-                    analyzeSecurityReports(securityFindings)
-                    
-                    // Calculate totals
-                    def totalCritical = securityFindings.critical + securityFindings.trivy_critical
-                    def totalHigh = securityFindings.high + securityFindings.trivy_high
-                    def totalMedium = securityFindings.medium + securityFindings.trivy_medium
-                    securityFindings.total_vulnerabilities = totalCritical + totalHigh + totalMedium + securityFindings.secrets + securityFindings.semgrep
-                    
-                    // Display results
-                    echo "=== SECURITY SCAN RESULTS ==="
-                    echo "🔴 CRITICAL vulnerabilities: ${securityFindings.critical} (OWASP) + ${securityFindings.trivy_critical} (Trivy) = ${totalCritical} total"
-                    echo "🟠 HIGH vulnerabilities: ${securityFindings.high} (OWASP) + ${securityFindings.trivy_high} (Trivy) = ${totalHigh} total"
-                    echo "🟡 MEDIUM vulnerabilities: ${securityFindings.medium} (OWASP) + ${securityFindings.trivy_medium} (Trivy) = ${totalMedium} total"
-                    echo "🔑 Secrets exposed: ${securityFindings.secrets}"
-                    echo "🐛 Code issues (SAST): ${securityFindings.semgrep}"
-                    echo "📊 Total security findings: ${securityFindings.total_vulnerabilities}"
-                    echo "============================="
-                    
-                    // Apply security policies - CORRECTED LOGIC
-                    def shouldFail = false
-                    def shouldBeUnstable = false
-                    
-                    // FAILURE conditions (strict policies)
-                    if (params.FAIL_ON_CRITICAL_VULNS && totalCritical > 0) {
-                        echo "❌ CRITICAL vulnerabilities detected: ${totalCritical} (FAIL_ON_CRITICAL_VULNS=true)"
-                        shouldFail = true
-                    } else if (params.FAIL_ON_HIGH_VULNS && totalHigh > 0) {
-                        echo "❌ HIGH vulnerabilities detected: ${totalHigh} (FAIL_ON_HIGH_VULNS=true)"
-                        shouldFail = true
-                    } else if (params.FAIL_ON_SECRETS && securityFindings.secrets > 0) {
-                        echo "❌ SECRETS detected: ${securityFindings.secrets} (FAIL_ON_SECRETS=true)"
-                        shouldFail = true
-                    }
-                    
-                    if (shouldFail) {
-                        currentBuild.result = 'FAILURE'
-                        error "Build failed due to security policy violations"
-                    }
-                    
-                    // UNSTABLE conditions (warnings only)
-                    // Only mark as UNSTABLE if we have critical/high vulnerabilities AND policies are strict
-                    // Otherwise, continue with SUCCESS but report findings
-                    if (totalCritical > 0 && params.FAIL_ON_CRITICAL_VULNS) {
-                        echo "⚠️ CRITICAL vulnerabilities detected: ${totalCritical} (continuing with UNSTABLE due to policy)"
-                        if (currentBuild.result != 'FAILURE') {
-                            currentBuild.result = 'UNSTABLE'
-                        }
-                    } else if (totalHigh > 0 && params.FAIL_ON_HIGH_VULNS) {
-                        echo "⚠️ HIGH vulnerabilities detected: ${totalHigh} (continuing with UNSTABLE due to policy)"
-                        if (currentBuild.result == null) {
-                            currentBuild.result = 'UNSTABLE'
-                        }
-                    } else if (securityFindings.secrets > 0 && params.FAIL_ON_SECRETS) {
-                        echo "🔑 SECRETS found: ${securityFindings.secrets} (continuing with UNSTABLE due to policy)"
-                        if (currentBuild.result == null) {
-                            currentBuild.result = 'UNSTABLE'
-                        }
-                    } else if (totalMedium > 0 && !params.ALLOW_MEDIUM_VULNS) {
-                        echo "🟡 MEDIUM vulnerabilities detected: ${totalMedium} (continuing with UNSTABLE)"
-                        if (currentBuild.result == null) {
-                            currentBuild.result = 'UNSTABLE'
-                        }
-                    } else {
-                        // SUCCESS conditions - vulnerabilities are allowed by policy
-                        if (totalCritical > 0) {
-                            echo "🔴 CRITICAL vulnerabilities detected: ${totalCritical} (allowed by policy - FAIL_ON_CRITICAL_VULNS=false)"
-                        }
-                        if (totalHigh > 0) {
-                            echo "🟠 HIGH vulnerabilities detected: ${totalHigh} (allowed by policy - FAIL_ON_HIGH_VULNS=false)"
-                        }
-                        if (securityFindings.secrets > 0) {
-                            echo "🔑 SECRETS found: ${securityFindings.secrets} (allowed by policy - FAIL_ON_SECRETS=false)"
-                        }
-                        if (totalMedium > 0) {
-                            echo "🟡 MEDIUM vulnerabilities detected: ${totalMedium} (allowed by policy - ALLOW_MEDIUM_VULNS=true)"
-                        }
-                        if (securityFindings.semgrep > 0) {
-                            echo "🐛 SAST findings: ${securityFindings.semgrep} (allowed by policy - ALLOW_SAST_FINDINGS=true)"
-                        }
-                        
-                        echo "✅ Security findings within acceptable limits according to policies"
-                        // Don't change build result if it's already SUCCESS
-                    }
-                    
-                    // Save findings
-                    writeJSON file: 'security-findings.json', json: securityFindings
-                    archiveArtifacts artifacts: 'security-findings.json', allowEmptyArchive: true
-                    
-                    echo "✅ Security policies applied successfully"
-                }
-            }
-        }
-
-        // Étape 10: Génération des rapports finaux
-        stage('Generate Comprehensive Reports') {
-            steps {
-                script {
-                    echo "📊 Generating comprehensive reports..."
-                    
-                    def securityFindings = [critical: 0, high: 0, medium: 0, secrets: 0, semgrep: 0, trivy_critical: 0, trivy_high: 0, trivy_medium: 0]
-                    if (fileExists('security-findings.json')) {
-                        securityFindings = readJSON file: 'security-findings.json'
-                    }
-                    
-                    generateComprehensiveReports(securityFindings)
-                    generateFinalReport(securityFindings, currentBuild.currentResult ?: 'SUCCESS')
-                    
-                    echo "✅ All reports generated successfully"
-                }
-            }
-        }
-
-        // Étape 11: Notifications et livraison
-        stage('Notifications & Delivery') {
-            steps {
-                script {
-                    echo "📧 Sending notifications and reports..."
-                    
-                    def securityFindings = [critical: 0, high: 0, medium: 0, secrets: 0, semgrep: 0, trivy_critical: 0, trivy_high: 0, trivy_medium: 0]
-                    if (fileExists('security-findings.json')) {
-                        securityFindings = readJSON file: 'security-findings.json'
-                    }
-                    
-                    // Send notifications based on parameter
-                    def notificationType = params.NOTIFICATION_TYPE ?: 'NONE'
-                    def finalStatus = currentBuild.currentResult ?: 'SUCCESS'
-                    
-                    if (notificationType == 'EMAIL' || notificationType == 'BOTH') {
-                        try {
-                            sendEmailNotification(securityFindings, finalStatus)
-                            echo "✅ Email notification sent to ${params.EMAIL_RECIPIENTS}"
-                        } catch (Exception e) {
-                            echo "⚠️ Failed to send email notification: ${e.message}"
-                        }
-                    } else {
-                        echo "ℹ️ Email notification skipped (notification type: ${notificationType})"
-                    }
-                    
-                    if (notificationType == 'SLACK' || notificationType == 'BOTH') {
-                        try {
-                            sendSlackNotification(securityFindings, finalStatus)
-                            echo "✅ Slack notification sent"
-                        } catch (Exception e) {
-                            echo "⚠️ Failed to send Slack notification: ${e.message}"
-                        }
-                    } else {
-                        echo "ℹ️ Slack notification skipped (notification type: ${notificationType})"
-                    }
-                }
-            }
-        }
     }
 
     post {
         always {
             script {
-                def finalStatus = currentBuild.currentResult ?: 'SUCCESS'
-                def duration = currentBuild.durationString.replace(' and counting', '')
-                
-                echo "=== PIPELINE EXECUTION SUMMARY ==="
-                echo "Build Result: ${finalStatus}"
-                echo "Build Number: ${env.BUILD_NUMBER}"
-                echo "Duration: ${duration}"
-                echo "Job: ${env.JOB_NAME}"
-                echo "Git Commit: ${env.GIT_COMMIT}"
-                echo "Git Author: ${env.GIT_AUTHOR ?: 'N/A'}"
-                echo "Commit Message: ${env.GIT_COMMIT_MESSAGE ?: 'N/A'}"
-                echo "Triggered by: ${env.BUILD_USER ?: 'System'}"
-                echo "================================="
-                
-                // Generate final artifacts
-                def securityFindings = [critical: 0, high: 0, medium: 0, secrets: 0, semgrep: 0, trivy_critical: 0, trivy_high: 0, trivy_medium: 0]
-                if (fileExists('security-findings.json')) {
-                    securityFindings = readJSON file: 'security-findings.json'
-                }
-                
-                // Archive all important reports
+                def buildStatus = currentBuild.currentResult
+                def buildUser = currentBuild.getBuildCauses('hudson.model.Cause$UserIdCause')[0]?.userId ?: 'GitHub User'
+                def buildUrl = "${env.BUILD_URL}"
+
                 sh '''
-                    echo "📁 Archiving final reports..."
-                    ls -la *.html *.md *.json 2>/dev/null | head -20 || echo "No report files found"
+                    mkdir -p reports
+                    cp semgrep-report.json reports/ 2>/dev/null || true
+                    cp target/spotbugsXml.xml reports/ 2>/dev/null || true
+                    cp target/site/spotbugs.html reports/ 2>/dev/null || true
+                    cp dependency-check-report.html reports/ 2>/dev/null || true
+                    cp secrets_reports/*.json reports/ 2>/dev/null || true
+                    cp zap_reports/*.html reports/ 2>/dev/null || true
+                    cp trivy_reports/*.html reports/ 2>/dev/null || true
                 '''
-                
-                // Final cleanup - but keep reports for email attachments
+
+                sh 'echo "--- Reports Collected ---" && ls -la reports || true'
+
                 sh '''
-                    echo "🧹 Cleaning temporary files..."
-                    # Keep HTML and MD reports for email attachments
-                    rm -f security-findings.json trivy-sca.json gitleaks-report.json semgrep.json 2>/dev/null || true
-                    echo "✅ Cleanup completed"
+                    if command -v zip >/dev/null 2>&1; then
+                        zip -r reports.zip reports/
+                    else
+                        tar -czf reports.tar.gz reports/
+                    fi
                 '''
-            }
-        }
-        success {
-            echo "🎉 Pipeline executed successfully!"
-            script {
-                if (params.NOTIFICATION_TYPE == 'EMAIL' || params.NOTIFICATION_TYPE == 'BOTH') {
-                    try {
-                        def securityFindings = [critical: 0, high: 0, medium: 0, secrets: 0, semgrep: 0, trivy_critical: 0, trivy_high: 0, trivy_medium: 0]
-                        if (fileExists('security-findings.json')) {
-                            securityFindings = readJSON file: 'security-findings.json'
-                        }
-                        
-                        def totalCritical = securityFindings.critical + securityFindings.trivy_critical
-                        def totalHigh = securityFindings.high + securityFindings.trivy_high
-                        def totalMedium = securityFindings.medium + securityFindings.trivy_medium
-                        
-                        emailext (
-                            subject: "✅ SUCCESS: DevSecOps Pipeline - ${env.JOB_NAME} #${env.BUILD_NUMBER}",
-                            body: """<h2>🎉 DevSecOps Pipeline Execution Successful</h2>
-<p><strong>Project:</strong> ${env.JOB_NAME}</p>
-<p><strong>Build:</strong> #${env.BUILD_NUMBER}</p>
-<p><strong>Status:</strong> SUCCESS ✅</p>
-<p><strong>Duration:</strong> ${currentBuild.durationString.replace(' and counting', '')}</p>
-<p><strong>Commit:</strong> ${env.GIT_COMMIT}</p>
-<p><strong>Author:</strong> ${env.GIT_AUTHOR ?: 'N/A'}</p>
 
-<h3>Security Summary</h3>
-<ul>
-    <li>✅ Critical Vulnerabilities: ${totalCritical}</li>
-    <li>✅ High Vulnerabilities: ${totalHigh}</li>
-    <li>✅ Medium Vulnerabilities: ${totalMedium}</li>
-    <li>✅ Secrets Exposed: ${securityFindings.secrets}</li>
-    <li>✅ Code Issues: ${securityFindings.semgrep}</li>
-</ul>
-
-<p>All security checks passed successfully. The application is ready for deployment.</p>
-<br/>
-<p><em>Generated by Jenkins DevSecOps Pipeline</em></p>""",
-                            to: params.EMAIL_RECIPIENTS,
-                            attachLog: false,
-                            attachmentsPattern: 'security-compliance-report.html, devsecops-final-report.md'
-                        )
-                    } catch (Exception e) {
-                        echo "⚠️ Success email notification failed: ${e.message}"
-                    }
-                }
-            }
-        }
-        failure {
-            echo "❌ Pipeline failed - check stage logs for details"
-        }
-        unstable {
-            echo "⚠️ Pipeline completed with unstable status - security or quality issues detected"
-            script {
-                if (params.NOTIFICATION_TYPE == 'EMAIL' || params.NOTIFICATION_TYPE == 'BOTH') {
-                    try {
-                        def securityFindings = [critical: 0, high: 0, medium: 0, secrets: 0, semgrep: 0, trivy_critical: 0, trivy_high: 0, trivy_medium: 0]
-                        if (fileExists('security-findings.json')) {
-                            securityFindings = readJSON file: 'security-findings.json'
-                        }
-                        
-                        def totalCritical = securityFindings.critical + securityFindings.trivy_critical
-                        def totalHigh = securityFindings.high + securityFindings.trivy_high
-                        def totalMedium = securityFindings.medium + securityFindings.trivy_medium
-                        
-                        emailext (
-                            subject: "⚠️ UNSTABLE: DevSecOps Pipeline - ${env.JOB_NAME} #${env.BUILD_NUMBER}",
-                            body: """<h2>⚠️ DevSecOps Pipeline - Security Issues Detected</h2>
-<p><strong>Project:</strong> ${env.JOB_NAME}</p>
-<p><strong>Build:</strong> #${env.BUILD_NUMBER}</p>
-<p><strong>Status:</strong> UNSTABLE ⚠️</p>
-<p><strong>Duration:</strong> ${currentBuild.durationString.replace(' and counting', '')}</p>
-<p><strong>Commit:</strong> ${env.GIT_COMMIT}</p>
-<p><strong>Author:</strong> ${env.GIT_AUTHOR ?: 'N/A'}</p>
-
-<h3>Security Findings</h3>
-<ul>
-    <li>🔴 Critical Vulnerabilities: ${totalCritical}</li>
-    <li>🟠 High Vulnerabilities: ${totalHigh}</li>
-    <li>🟡 Medium Vulnerabilities: ${totalMedium}</li>
-    <li>🔑 Secrets Exposed: ${securityFindings.secrets}</li>
-    <li>🐛 Code Issues: ${securityFindings.semgrep}</li>
-</ul>
-
-<h3>Recommendations</h3>
-<ul>
-    ${totalCritical > 0 ? '<li>🔴 Immediately address critical vulnerabilities</li>' : ''}
-    ${totalHigh > 0 ? '<li>🟠 Plan remediation for high severity issues</li>' : ''}
-    ${totalMedium > 0 ? '<li>🟡 Monitor medium severity vulnerabilities</li>' : ''}
-    ${securityFindings.secrets > 0 ? '<li>🔴 Rotate exposed credentials immediately</li>' : ''}
-    ${securityFindings.semgrep > 0 ? '<li>🟠 Review and fix SAST findings</li>' : ''}
-</ul>
-
-<p>Please review the attached security reports and address the issues before deployment.</p>
-<br/>
-<p><em>Generated by Jenkins DevSecOps Pipeline</em></p>""",
-                            to: params.EMAIL_RECIPIENTS,
-                            attachLog: true,
-                            attachmentsPattern: 'security-compliance-report.html, devsecops-final-report.md'
-                        )
-                    } catch (Exception e) {
-                        echo "⚠️ Unstable email notification failed: ${e.message}"
-                    }
-                }
+                emailext(
+                    to: 'mekni.amin75@gmail.com',
+                    subject: "📊 Security Pipeline ${buildStatus} - ${env.JOB_NAME} #${env.BUILD_NUMBER}",
+                    body: """
+                        <p>Hello,</p>
+                        <p>The security pipeline has completed with status: <b>${buildStatus}</b>.</p>
+                        <ul>
+                            <li><b>Project:</b> ${env.JOB_NAME}</li>
+                            <li><b>Build Number:</b> ${env.BUILD_NUMBER}</li>
+                            <li><b>Triggered by:</b> ${buildUser}</li>
+                            <li><b>Jenkins Build URL:</b> <a href="${buildUrl}">${buildUrl}</a></li>
+                        </ul>
+                        <p>All generated reports (Semgrep, SpotBugs, Dependency-Check, Secrets, Trivy, and ZAP) are attached.</p>
+                        <hr>
+                        <p>— Jenkins CI/CD Security Pipeline</p>
+                    """,
+                    mimeType: 'text/html',
+                    attachmentsPattern: 'reports/**',
+                    attachLog: true
+                )
             }
         }
     }
 }
 
-// Helper methods
-
-def countXmlOccurrences(String text, String pattern) {
-    if (!text) return 0
-    int count = 0
-    int index = 0
-    while ((index = text.indexOf(pattern, index)) != -1) {
-        count++
-        index += pattern.length()
-    }
-    return count
-}
-
-def analyzeSecurityReports(securityFindings) {
-    echo "🔍 Analyzing security reports..."
-    
-    // Analyze Gitleaks report
-    try {
-        if (fileExists('gitleaks-report.json')) {
-            def gitleaksContent = readFile('gitleaks-report.json')
-            if (gitleaksContent.trim() && gitleaksContent != '{"Findings": []}') {
-                def gitleaksReport = readJSON text: gitleaksContent
-                securityFindings.secrets = gitleaksReport?.Findings?.size() ?: 0
-            }
-        }
-    } catch (Exception e) {
-        echo "⚠️ Error reading gitleaks report: ${e.message}"
-    }
-    
-    // Analyze Semgrep report
-    try {
-        if (fileExists('semgrep.json')) {
-            def semgrepContent = readFile('semgrep.json')
-            if (semgrepContent.trim() && semgrepContent != '{"results": []}') {
-                def semgrepReport = readJSON text: semgrepContent
-                securityFindings.semgrep = semgrepReport?.results?.size() ?: 0
-            }
-        }
-    } catch (Exception e) {
-        echo "⚠️ Error reading semgrep report: ${e.message}"
-    }
-    
-    // Analyze OWASP Dependency Check report
-    try {
-        if (fileExists('target/dependency-check-report/dependency-check-report.xml')) {
-            def xmlContent = readFile('target/dependency-check-report/dependency-check-report.xml')
-            securityFindings.critical = countXmlOccurrences(xmlContent, 'severity="CRITICAL"')
-            securityFindings.high = countXmlOccurrences(xmlContent, 'severity="HIGH"')
-            securityFindings.medium = countXmlOccurrences(xmlContent, 'severity="MEDIUM"')
-        }
-    } catch (Exception e) {
-        echo "⚠️ Error analyzing dependency check report: ${e.message}"
-    }
-    
-    // Analyze Trivy report
-    try {
-        if (fileExists('trivy-sca.json')) {
-            def trivyContent = readFile('trivy-sca.json')
-            if (trivyContent.trim() && trivyContent != '{"Results": []}') {
-                def trivyReport = readJSON text: trivyContent
-                def results = trivyReport?.Results ?: []
-                results.each { result ->
-                    def vulnerabilities = result.Vulnerabilities ?: []
-                    vulnerabilities.each { vuln ->
-                        if (vuln.Severity == 'CRITICAL') securityFindings.trivy_critical++
-                        else if (vuln.Severity == 'HIGH') securityFindings.trivy_high++
-                        else if (vuln.Severity == 'MEDIUM') securityFindings.trivy_medium++
-                    }
-                }
-            }
-        }
-    } catch (Exception e) {
-        echo "⚠️ Error analyzing Trivy report: ${e.message}"
-    }
-}
-
-def generateComprehensiveReports(securityFindings) {
-    def totalCritical = securityFindings.critical + securityFindings.trivy_critical
-    def totalHigh = securityFindings.high + securityFindings.trivy_high
-    def totalMedium = securityFindings.medium + securityFindings.trivy_medium
-    
-    // Generate HTML Report
-    def htmlReport = """<!DOCTYPE html>
-<html>
-<head>
-    <title>DevSecOps Security Compliance Report</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f5f5f5; }
-        .container { max-width: 1200px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-        .header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 30px; border-radius: 8px; margin-bottom: 20px; }
-        .metrics { display: flex; justify-content: space-around; margin: 20px 0; flex-wrap: wrap; }
-        .metric-card { background: white; padding: 20px; border-radius: 8px; text-align: center; min-width: 140px; margin: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-top: 4px solid; }
-        .critical { border-top-color: #d32f2f; }
-        .high { border-top-color: #f57c00; }
-        .medium { border-top-color: #fbc02d; }
-        .secrets { border-top-color: #7b1fa2; }
-        .issues { border-top-color: #1976d2; }
-        .content { margin: 20px 0; }
-        .recommendation { padding: 15px; margin: 10px 0; border-radius: 5px; border-left: 4px solid; }
-        .critical-rec { background: #ffebee; border-left-color: #d32f2f; }
-        .high-rec { background: #fff3e0; border-left-color: #f57c00; }
-        .medium-rec { background: #fff8e1; border-left-color: #fbc02d; }
-        .success-rec { background: #e8f5e8; border-left-color: #4caf50; }
-        h1, h2 { color: #333; }
-        .summary-table { width: 100%; border-collapse: collapse; margin: 20px 0; }
-        .summary-table th, .summary-table td { padding: 12px; text-align: left; border-bottom: 1px solid #ddd; }
-        .summary-table th { background-color: #f5f5f5; }
-        .status-badge { padding: 4px 8px; border-radius: 4px; color: white; font-size: 12px; }
-        .status-success { background: #4caf50; }
-        .status-warning { background: #ff9800; }
-        .status-danger { background: #f44336; }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <h1>🛡️ DevSecOps Security Compliance Report</h1>
-            <p><strong>Build:</strong> ${env.JOB_NAME} #${env.BUILD_NUMBER}</p>
-            <p><strong>Date:</strong> ${new Date().format("yyyy-MM-dd HH:mm:ss")}</p>
-            <p><strong>Status:</strong> <span class="status-badge ${currentBuild.currentResult == 'SUCCESS' ? 'status-success' : currentBuild.currentResult == 'UNSTABLE' ? 'status-warning' : 'status-danger'}">${currentBuild.currentResult ?: 'SUCCESS'}</span></p>
-        </div>
-        
-        <div class="metrics">
-            <div class="metric-card critical">
-                <h3>🔴 CRITICAL</h3>
-                <p style="font-size: 24px; font-weight: bold; margin: 10px 0;">${totalCritical}</p>
-            </div>
-            <div class="metric-card high">
-                <h3>🟠 HIGH</h3>
-                <p style="font-size: 24px; font-weight: bold; margin: 10px 0;">${totalHigh}</p>
-            </div>
-            <div class="metric-card medium">
-                <h3>🟡 MEDIUM</h3>
-                <p style="font-size: 24px; font-weight: bold; margin: 10px 0;">${totalMedium}</p>
-            </div>
-            <div class="metric-card secrets">
-                <h3>🔑 SECRETS</h3>
-                <p style="font-size: 24px; font-weight: bold; margin: 10px 0;">${securityFindings.secrets}</p>
-            </div>
-            <div class="metric-card issues">
-                <h3>🐛 CODE ISSUES</h3>
-                <p style="font-size: 24px; font-weight: bold; margin: 10px 0;">${securityFindings.semgrep}</p>
-            </div>
-        </div>
-        
-        <div class="content">
-            <h2>Security Assessment Summary</h2>
-            <table class="summary-table">
-                <tr><th>Category</th><th>Count</th><th>Status</th></tr>
-                <tr><td>Critical Vulnerabilities</td><td>${totalCritical}</td><td>${totalCritical > 0 ? '<span class="status-badge status-danger">Needs Attention</span>' : '<span class="status-badge status-success">Secure</span>'}</td></tr>
-                <tr><td>High Vulnerabilities</td><td>${totalHigh}</td><td>${totalHigh > 0 ? '<span class="status-badge status-warning">Review Recommended</span>' : '<span class="status-badge status-success">Secure</span>'}</td></tr>
-                <tr><td>Medium Vulnerabilities</td><td>${totalMedium}</td><td>${totalMedium > 0 ? '<span class="status-badge status-warning">Monitor</span>' : '<span class="status-badge status-success">Secure</span>'}</td></tr>
-                <tr><td>Secrets in Code</td><td>${securityFindings.secrets}</td><td>${securityFindings.secrets > 0 ? '<span class="status-badge status-danger">Critical Issue</span>' : '<span class="status-badge status-success">Secure</span>'}</td></tr>
-                <tr><td>SAST Findings</td><td>${securityFindings.semgrep}</td><td>${securityFindings.semgrep > 0 ? '<span class="status-badge status-warning">Review Recommended</span>' : '<span class="status-badge status-success">Secure</span>'}</td></tr>
-            </table>
-            
-            <h2>Security Recommendations</h2>
-            ${totalCritical > 0 ? '<div class="recommendation critical-rec"><strong>🔴 CRITICAL ACTION REQUIRED:</strong> Address critical vulnerabilities in dependencies immediately. These pose significant security risks.</div>' : ''}
-            ${totalHigh > 0 ? '<div class="recommendation high-rec"><strong>🟠 HIGH PRIORITY:</strong> Review and plan remediation for high severity vulnerabilities in the next sprint.</div>' : ''}
-            ${totalMedium > 0 ? '<div class="recommendation medium-rec"><strong>🟡 MEDIUM PRIORITY:</strong> Monitor medium severity vulnerabilities and address during regular maintenance.</div>' : ''}
-            ${securityFindings.secrets > 0 ? '<div class="recommendation critical-rec"><strong>🔴 CRITICAL ACTION REQUIRED:</strong> Rotate exposed secrets immediately and remove them from the codebase.</div>' : ''}
-            ${securityFindings.semgrep > 0 ? '<div class="recommendation high-rec"><strong>🟠 CODE QUALITY:</strong> Review SAST findings to address potential security issues in the code.</div>' : ''}
-            
-            ${totalCritical == 0 && totalHigh == 0 && securityFindings.secrets == 0 ? '<div class="recommendation success-rec"><strong>✅ EXCELLENT SECURITY POSTURE:</strong> No critical security issues detected. Maintain current security practices.</div>' : ''}
-            
-            <h2>Next Steps</h2>
-            <ul>
-                ${totalCritical > 0 ? '<li>Immediately update dependencies with critical vulnerabilities</li>' : ''}
-                ${totalHigh > 0 ? '<li>Schedule remediation for high severity issues</li>' : ''}
-                ${totalMedium > 0 ? '<li>Plan updates for medium severity vulnerabilities</li>' : ''}
-                ${securityFindings.secrets > 0 ? '<li>Rotate all exposed credentials and implement secret management</li>' : ''}
-                ${securityFindings.semgrep > 0 ? '<li>Review and fix SAST findings in the code review process</li>' : ''}
-                ${totalCritical == 0 && totalHigh == 0 ? '<li>Continue with current security practices and monitoring</li>' : ''}
-            </ul>
-            
-            <h2>Build Information</h2>
-            <table class="summary-table">
-                <tr><th>Property</th><th>Value</th></tr>
-                <tr><td>Build Number</td><td>${env.BUILD_NUMBER}</td></tr>
-                <tr><td>Job Name</td><td>${env.JOB_NAME}</td></tr>
-                <tr><td>Git Commit</td><td>${env.GIT_COMMIT}</td></tr>
-                <tr><td>Git Author</td><td>${env.GIT_AUTHOR ?: 'N/A'}</td></tr>
-                <tr><td>Build Duration</td><td>${currentBuild.durationString.replace(' and counting', '')}</td></tr>
-                <tr><td>Build Timestamp</td><td>${new Date().format("yyyy-MM-dd HH:mm:ss")}</td></tr>
-            </table>
-        </div>
-    </div>
-</body>
-</html>"""
-    writeFile file: 'security-compliance-report.html', text: htmlReport
-    archiveArtifacts artifacts: 'security-compliance-report.html', allowEmptyArchive: true
-    echo "✅ Comprehensive HTML report generated: security-compliance-report.html"
-}
-
-def generateFinalReport(securityFindings, finalStatus) {
-    def totalCritical = securityFindings.critical + securityFindings.trivy_critical
-    def totalHigh = securityFindings.high + securityFindings.trivy_high
-    def totalMedium = securityFindings.medium + securityFindings.trivy_medium
-    
-    def finalReport = """# 🛡️ DevSecOps Pipeline - Final Execution Report
-
-## Executive Summary
-**Status**: ${finalStatus}  
-**Build**: ${env.JOB_NAME} #${env.BUILD_NUMBER}  
-**Duration**: ${currentBuild.durationString.replace(' and counting', '')}  
-**Git Commit**: ${env.GIT_COMMIT ?: 'N/A'}  
-**Git Author**: ${env.GIT_AUTHOR ?: 'N/A'}  
-**Triggered by**: ${env.BUILD_USER ?: 'System'}  
-**Timestamp**: ${new Date().format("yyyy-MM-dd HH:mm:ss")}
-
-## Security Assessment
-${securityFindings.secrets == 0 ? '✅' : '🔴'} **Secrets Detection**: ${securityFindings.secrets} findings  
-${securityFindings.semgrep == 0 ? '✅' : '🟠'} **SAST Analysis**: ${securityFindings.semgrep} findings  
-${totalCritical == 0 ? '✅' : '🔴'} **Critical Vulnerabilities**: ${totalCritical} total  
-${totalHigh == 0 ? '✅' : '🟠'} **High Vulnerabilities**: ${totalHigh} total  
-${totalMedium == 0 ? '✅' : '🟡'} **Medium Vulnerabilities**: ${totalMedium} total  
-
-## Quality Gates
-- **SonarQube Quality Gate**: ✅ PASSED
-- **Build Status**: ${finalStatus}
-- **Tests Execution**: ✅ Completed
-- **Security Scans**: ✅ All tools executed
-
-## Generated Artifacts
-- Security Compliance Report (HTML)
-- Vulnerability Analysis Reports
-- Test Coverage Reports (JaCoCo)
-- Application Package (WAR)
-- SBOM Documentation
-- Dependency Check Reports
-
-## Security Status
-${totalCritical > 0 ? '🔴 **CRITICAL VULNERABILITIES DETECTED**: Review and address critical issues immediately' : ''}
-${totalHigh > 0 ? '🟠 **HIGH VULNERABILITIES DETECTED**: Plan remediation for high severity issues' : ''}
-${totalMedium > 0 ? '🟡 **MEDIUM VULNERABILITIES DETECTED**: Monitor and plan updates' : ''}
-${securityFindings.secrets > 0 ? '🔑 **SECRETS EXPOSED**: Rotate credentials immediately' : ''}
-${securityFindings.semgrep > 0 ? '🐛 **CODE ISSUES DETECTED**: Review SAST findings' : ''}
-${totalCritical == 0 && totalHigh == 0 && securityFindings.secrets == 0 ? '✅ **SECURE**: No critical security issues detected' : '⚠️ **SECURITY IMPROVEMENTS NEEDED**'}
-
-## Recommendations
-${totalCritical > 0 ? '- **Immediate Action**: Update dependencies with critical vulnerabilities\\n' : ''}
-${totalHigh > 0 ? '- **High Priority**: Schedule remediation for high severity vulnerabilities\\n' : ''}
-${totalMedium > 0 ? '- **Medium Priority**: Plan updates for medium severity vulnerabilities\\n' : ''}
-${securityFindings.secrets > 0 ? '- **Critical**: Rotate all exposed secrets and implement proper secret management\\n' : ''}
-${securityFindings.semgrep > 0 ? '- **Code Quality**: Review and address SAST findings\\n' : ''}
-${totalCritical == 0 && totalHigh == 0 ? '- **Maintenance**: Continue current security practices\\n' : ''}
-
-## Build Details
-- **Build URL**: ${env.BUILD_URL}
-- **Workspace**: ${env.WORKSPACE}
-- **Node**: ${env.NODE_NAME}
-- **Java Version**: ${env.JAVA_HOME}
-
----
-*Pipeline executed with comprehensive security checks*  
-*Build URL: ${env.BUILD_URL}*  
-*Generated: ${new Date().format("yyyy-MM-dd HH:mm:ss")}*"""
-    writeFile file: 'devsecops-final-report.md', text: finalReport
-    archiveArtifacts artifacts: 'devsecops-final-report.md', allowEmptyArchive: true
-    echo "✅ Final report generated: devsecops-final-report.md"
-}
-
-def sendSlackNotification(securityFindings, finalStatus) {
-    def totalCritical = securityFindings.critical + securityFindings.trivy_critical
-    def totalHigh = securityFindings.high + securityFindings.trivy_high
-    def totalMedium = securityFindings.medium + securityFindings.trivy_medium
-    
-    def color = 'good'
-    def statusIcon = '✅'
-    
-    if (finalStatus == 'FAILURE') {
-        color = 'danger'
-        statusIcon = '❌'
-    } else if (finalStatus == 'UNSTABLE') {
-        color = 'warning'
-        statusIcon = '⚠️'
-    } else if (totalCritical > 0) {
-        color = 'danger'
-        statusIcon = '🔴'
-    } else if (totalHigh > 0) {
-        color = 'warning'
-        statusIcon = '🟠'
-    }
-    
-    slackSend(
-        channel: '#devsecops',
-        color: color,
-        message: """${statusIcon} DevSecOps Pipeline ${finalStatus}: ${env.JOB_NAME} #${env.BUILD_NUMBER}
-🔴 Critical: ${totalCritical} | 🟠 High: ${totalHigh} | 🟡 Medium: ${totalMedium}
-🔑 Secrets: ${securityFindings.secrets} | 🐛 Issues: ${securityFindings.semgrep}
-📊 Build: ${finalStatus} | ⏱️ Duration: ${currentBuild.durationString.replace(' and counting', '')}
-👤 Author: ${env.GIT_AUTHOR ?: 'N/A'}
-${totalCritical > 0 ? '🚨 CRITICAL VULNERABILITIES DETECTED' : totalHigh > 0 ? '⚠️ Review vulnerabilities needed' : '✅ All security checks passed'}
-🔗 ${env.BUILD_URL}"""
-    )
-}
-
-def sendEmailNotification(securityFindings, finalStatus) {
-    def totalCritical = securityFindings.critical + securityFindings.trivy_critical
-    def totalHigh = securityFindings.high + securityFindings.trivy_high
-    def totalMedium = securityFindings.medium + securityFindings.trivy_medium
-    
-    def subject = ""
-    def body = ""
-    
-    if (finalStatus == 'SUCCESS') {
-        subject = "✅ SUCCESS: DevSecOps Pipeline - ${env.JOB_NAME} #${env.BUILD_NUMBER}"
-        body = """<h2>🎉 DevSecOps Pipeline Execution Successful</h2>
-<p><strong>Project:</strong> ${env.JOB_NAME}</p>
-<p><strong>Build:</strong> #${env.BUILD_NUMBER}</p>
-<p><strong>Status:</strong> SUCCESS ✅</p>
-<p><strong>Duration:</strong> ${currentBuild.durationString.replace(' and counting', '')}</p>
-<p><strong>Commit:</strong> ${env.GIT_COMMIT}</p>
-<p><strong>Author:</strong> ${env.GIT_AUTHOR ?: 'N/A'}</p>
-
-<h3>Security Summary</h3>
-<ul>
-    <li>✅ Critical Vulnerabilities: ${totalCritical}</li>
-    <li>✅ High Vulnerabilities: ${totalHigh}</li>
-    <li>✅ Medium Vulnerabilities: ${totalMedium}</li>
-    <li>✅ Secrets Exposed: ${securityFindings.secrets}</li>
-    <li>✅ Code Issues: ${securityFindings.semgrep}</li>
-</ul>
-
-<p>All security checks passed successfully. The application is ready for deployment.</p>
-<br/>
-<p><em>Generated by Jenkins DevSecOps Pipeline</em></p>"""
-    } else {
-        subject = "⚠️ ${finalStatus}: DevSecOps Pipeline - ${env.JOB_NAME} #${env.BUILD_NUMBER}"
-        body = """<h2>⚠️ DevSecOps Pipeline - Security Issues Detected</h2>
-<p><strong>Project:</strong> ${env.JOB_NAME}</p>
-<p><strong>Build:</strong> #${env.BUILD_NUMBER}</p>
-<p><strong>Status:</strong> ${finalStatus} ⚠️</p>
-<p><strong>Duration:</strong> ${currentBuild.durationString.replace(' and counting', '')}</p>
-<p><strong>Commit:</strong> ${env.GIT_COMMIT}</p>
-<p><strong>Author:</strong> ${env.GIT_AUTHOR ?: 'N/A'}</p>
-
-<h3>Security Findings</h3>
-<ul>
-    <li>${totalCritical > 0 ? '🔴' : '✅'} Critical Vulnerabilities: ${totalCritical}</li>
-    <li>${totalHigh > 0 ? '🟠' : '✅'} High Vulnerabilities: ${totalHigh}</li>
-    <li>${totalMedium > 0 ? '🟡' : '✅'} Medium Vulnerabilities: ${totalMedium}</li>
-    <li>${securityFindings.secrets > 0 ? '🔴' : '✅'} Secrets Exposed: ${securityFindings.secrets}</li>
-    <li>${securityFindings.semgrep > 0 ? '🟠' : '✅'} Code Issues: ${securityFindings.semgrep}</li>
-</ul>
-
-<h3>Recommendations</h3>
-<ul>
-    ${totalCritical > 0 ? '<li>🔴 Immediately address critical vulnerabilities</li>' : ''}
-    ${totalHigh > 0 ? '<li>🟠 Plan remediation for high severity issues</li>' : ''}
-    ${totalMedium > 0 ? '<li>🟡 Monitor medium severity vulnerabilities</li>' : ''}
-    ${securityFindings.secrets > 0 ? '<li>🔴 Rotate exposed credentials immediately</li>' : ''}
-    ${securityFindings.semgrep > 0 ? '<li>🟠 Review and fix SAST findings</li>' : ''}
-</ul>
-
-<p>Please review the attached security reports and address the issues before deployment.</p>
-<br/>
-<p><em>Generated by Jenkins DevSecOps Pipeline</em></p>"""
-    }
-    
-    emailext (
-        subject: subject,
-        body: body,
-        to: params.EMAIL_RECIPIENTS,
-        attachLog: finalStatus != 'SUCCESS',
-        attachmentsPattern: 'security-compliance-report.html, devsecops-final-report.md'
-    )
-}
